--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ngx-translate/core": "^14.0.0",
+    "angular-mentions": "~1.4.0",
+    "ngx-popperjs": "13.2.2",
     "rxjs": "~7.4.0",
+    "stream-chat": "^8.4.1",
+    "stream-chat-angular": "4.19.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
