--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "angular-mentions": "~1.4.0",
     "ngx-popperjs": "13.2.2",
     "rxjs": "~7.4.0",
-    "stream-chat": "^8.4.1",
+    "stream-chat": "8.4.1",
     "stream-chat-angular": "4.19.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
